Source/WebKit2/WebProcess/WebCoreSupport/efl/WebErrorsEfl.cpp
@@ -26,7 +26,8 @@
 #include "config.h"
 #include "WebErrors.h"
 
-#include <WebCore/NotImplemented.h>
+#include "WKError.h"
+#include "WebError.h"
 #include <WebCore/ResourceError.h>
 #include <WebCore/ResourceRequest.h>
 #include <WebCore/ResourceResponse.h>
@@ -35,46 +36,47 @@ using namespace WebCore;
 
 namespace WebKit {
 
+// FIXME: Export following error codes so that application can understand.
+// We should establish Efl port's error system because application cannot understand those local define.
+// See https://bugs.webkit.org/show_bug.cgi?id=90783 for detail.
+enum {
+    kWKErrorCodeCancelled =                             300,
+    kWKErrorCodeFileDoesNotExist =                      301,
+};
+
 ResourceError cancelledError(const ResourceRequest& request)
 {
-    notImplemented();
-    return ResourceError();
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodeCancelled, request.url().string(), "Request cancelled");
 }
 
 ResourceError blockedError(const ResourceRequest& request)
 {
-    notImplemented();
-    return ResourceError();
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodeCannotUseRestrictedPort, request.url().string(), "Request blocked");
 }
 
 ResourceError cannotShowURLError(const ResourceRequest& request)
 {
-    notImplemented();
-    return ResourceError();
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodeCannotShowURL, request.url().string(), "Cannot show URL");
 }
 
 ResourceError interruptedForPolicyChangeError(const ResourceRequest& request)
 {
-    notImplemented();
-    return ResourceError();
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodeFrameLoadInterruptedByPolicyChange, request.url().string(), "Frame load interrupted by policy change");
 }
 
 ResourceError cannotShowMIMETypeError(const ResourceResponse& response)
 {
-    notImplemented();
-    return ResourceError();
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodeCannotShowMIMEType, response.url().string(), "Cannot show mimetype");
 }
 
 ResourceError fileDoesNotExistError(const ResourceResponse& response)
 {
-    notImplemented();
-    return ResourceError();
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodeFileDoesNotExist, response.url().string(), "File does not exist");
 }
 
 ResourceError pluginWillHandleLoadError(const ResourceResponse& response)
 {
-    notImplemented();
-    return ResourceError();
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodePlugInWillHandleLoad, response.url().string(), "Plugin will handle load");
 }
 
 } // namespace WebKit
